--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -375,6 +375,7 @@
                         <option value="navigateToURL">Navigate to URL</option>
                         <option value="spotlight">Spotlight</option>
                         <option value="reveal">Reveal</option>
+                        <option value="panZoomToTarget">Pan/Zoom to Target</option>
                         <!-- <option value="panZoom">Pan/Zoom</option> --> <!-- Add later -->
                     </select>
 
