pan zoom cusomtization

--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -388,6 +388,11 @@
                         <label for="objNavigateTo">Target (Slide ID/URL):</label>
                         <input type="text" id="objNavigateTo" class="sidebar-input">
                     </div>
+                    <!-- New Configuration Section for Pan/Zoom -->
+                    <div id="panZoomConfigEl" class="config-section" style="display:none;">
+                        <label for="objPanZoomLevel">Zoom Level (e.g., 1.5):</label>
+                        <input type="number" id="objPanZoomLevel" class="sidebar-input" step="0.1" min="0.1" value="1.5">
+                    </div>
                 </div>
 
             </div>
